<resources>
    <string name="app_name">Technologic</string>
    <string name="settingsFileName">Technologic.settings</string>
    <string name="cascadeFrontalFaceXML">lbpcascade_frontalface.xml</string>
    <string name="cascadeLeftEyeXML">haarcascade_lefteye_2splits.xml</string>
    <string-array name="trickModes">
        <item>Photo</item>
        <item>Vibration</item>
        <item>Write</item>
    </string-array>
    <string name="writeModeInstruction">Enter value which you want to save in NFC tag:</string>
    <string name="settingsTrickMode">Trick mode:</string>
    <string name="settingsReadingTagMode">Reading tag mode:</string>
    <string name="settingsVibrationInterval">Vibration interval (ms):</string>
    <string name="settingsNoVibrationInterval">No vibration interval (ms):</string>
    <string name="settingsEndOfBitInterval">Interval between signals (ms):</string>
    <string-array name="readingTagModes">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>
    <string name="vibrationModeLastReadValueTextView">Last read value:</string>
    <string name="readButtonText">READ</string>
    <string name="startTrickButtonText">START TRICK!</string>
    <string name="saveSettingsButtonText">SAVE</string>
    <string name="nfcNotEnabled">NFC NOT ENABLED!</string>
    <string-array name="cardSuits">
        <item>Hearts</item>
        <item>Spades</item>
        <item>Diamonds</item>
        <item>Clubs</item>
    </string-array>
    <string name="jsonItemIconId">icon_id</string>
    <string name="jsonItemCardId">card_id</string>
    <string name="jsonItemName">name</string>
    <string name="jsonItemVibrationPattern">vibration_pattern</string>
</resources>
